playground/frontend/docs/main.css
/* ... */
section {
    padding: 1em;

    p, li {
        line-height: 1.5;
    }

    li p {
        margin: 0;
    }

    & > :is(div, p, pre, table, ul, h4) {
        overflow-x: auto;

        @media (--regular-viewport) {
            &:not(ul) {
                margin-left: 1em;
            }
        }
    }

    @media (--small-viewport) {
        & > ul {
            padding-left: 3ex;
        }
    }

    pre.standalone {
        border: 5px solid var(--theme-code-bg);
        border-radius: 5px;

        &:has(.signature-command) {
            border: 0;

            code {
                background: unset;
                padding: 0;
            }
        }
    }

    h1 {
        border-bottom: 3px solid var(--theme-header-underline);
    }

    h2 {
        border-bottom: 1px solid var(--theme-header-underline);
    }

    h3, h4 {
        border-bottom: 1px solid var(--theme-header-underline);
    }

    code.hljs {
        display: block;

        .error {
            text-decoration: underline wavy red 1px;
            text-decoration-skip-ink: none;
        }

        .mark {
            text-decoration: underline var(--theme-hl-mark-bg) 0.5ex;
            text-decoration-skip-ink: none;
        }

        .signature-command {
            font-weight: bold;
        }

        .signature-argument {
            margin: 0 0.3ex;
            font-style: italic;
        }

        .command-implicit {
            font-style: italic;
        }

        a {
            color: inherit;
            text-decoration: none;

            &:hover {
                color: var(--theme-bg);
                background: var(--theme-links);
            }
        }

        &:hover a {
            text-decoration: underline;
        }

        /* Color for output text in `console` snippets */
        &:has(.hljs-meta + .language-bash) {
            color: #555;

            .language-bash {
                color: #24292e;
            }

            @media (prefers-color-scheme: dark) {
                color: #AAA;

                .language-bash {
                    color: #c9d1d9;
                }
            }
        }
    }

    :not(:is(a, pre)) > code {
        padding: 0 5px;
        border-radius: 5px;

        color: var(--theme-code-fg);
        background: var(--theme-code-bg);
    }

    a[href^="#cmd_"]:has(> code:first-child:last-child):not(:hover) {
        --theme-links: var(--theme-cmd-fg);
    }

    table {
        border-collapse: collapse;

        th, td {
            text-align: left;
            padding: 5px 10px;

            border: 1px solid var(--theme-header-underline);

            color: var(--theme-fg);
            background: var(--theme-bg);
        }
    }

    .example {
        & > * { margin: 1em; }

        color: var(--theme-example-fg);
        background: var(--theme-example-bg);

        border: 1px solid var(--theme-header-underline);

        &:has(> .vgs-output:first-child:last-child) {
            background: var(--theme-code-bg);
        }

        &::before {
            display: block;

            content: "Example";
            font-weight: bold;

            padding: 0.5ex 2ex;
            border-style: solid;
            border-color: var(--theme-header-underline);
            border-width: 0 0 1px 0;

            color: var(--theme-fg);
            background: var(--theme-bg);
        }

        @media screen {
            @supports (margin: calc(0.5ex - 1lh)) {
                &, & > :first-child {
                    margin-top: 2em;
                }

                &::before {
                    position: absolute;
                    border-width: 1px;
                    margin-top: calc(0.5ex - 1lh);
                    margin-left: 1ex;
                }
            }
        }
    }

    .screenshot {
        padding-left: 10px;

        img {
            max-width: calc(100% - 20px);
            box-shadow: 0 0 5px 5px var(--theme-screenshot-shadow);
            background: var(--theme-screenshot-shadow);
        }
    }

    .icons {
        ul {
            margin: 0;
            padding-left: 5px;

            li {
                list-style: none;
            }
        }
    }

    .definitions {
        ul {
            padding-left: 1em;
            margin: 0;

            li {
                list-style: none;

                &:not(:first-child) {
                    padding-top: 2ex;
                }
            }
        }

        p:first-child {
            strong {
                font-weight: normal;
                border-bottom: 1px dotted;
            }
        }

        p:not(:first-child) {
            margin: 1ex 2em;
        }
    }

    img[src^="./icon-"] {
        display: inline-block;

        color: #000;
        background: #fff;

        padding: 4px;
        margin: 5px;
        border-radius: 5px;

        box-shadow: 0 0 3px #777;

        vertical-align: middle;
        width: 1lh;
        height: 1lh;
    }

    kbd {
        display: inline-block;

        color: black;
        background: #fafafa;

        text-transform: capitalize;
        white-space: pre;

        font-size: 90%;
        font-family: monospace;

        padding: 0.2ch 1ch;
        margin: 0 0.25ch;

        border-radius: 0.5ch;
        border: solid #ddd;
        border-width: 1px 1px 3px
    }
}


a {
    color: var(--theme-links);
    text-decoration-color: color-mix(in srgb, currentcolor 30%, transparent);

    &:hover {
        text-decoration: none;

        color: var(--theme-bg);
        background: var(--theme-links);

        code {
            color: unset;
            background: unset;
        }
    }
}

#showTOC, #showTOC input {
    display: none;

    text-align: center;
    padding: 2ex;
    font-size: 110%;

    background: var(--theme-show-toc-bg);
    border-bottom: 1px solid var(--theme-fg);
}
/* ... */

